--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-/.idea
 *.iml
 .gradle
 /local.properties
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
+/.idea/misc.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
@@ -14,3 +14,4 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.idea/
