--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
     // Testing
     implementation "io.insert-koin:koin-test:$koin_version"
+    testImplementation 'org.mockito:mockito-core:3.7.7'
+    androidTestImplementation 'org.mockito:mockito-android:3.7.7'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation "android.arch.core:core-testing:1.1.1"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
