--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 }
 
 dependencies {
-    def room_version = '2.3.0'
+    def room_version = '2.4.0'
     def lifecycle_version = '2.4.0'
     def koin_version = '3.1.2'
 
@@ -67,6 +67,9 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-android:3.7.7'
     testImplementation 'org.mockito:mockito-inline:2.13.0'
     testImplementation "android.arch.core:core-testing:1.1.1"
+    //Retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
